--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
     <!-- Font Awesome icon cdnjs link -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 </head>
+
 <body>
     <div class="timer">
         0
@@ -19,11 +21,86 @@
 
     </div>
     <div class="keyboard">
-        <span data-key="Q">Q</span><span data-key="W">W</span><span data-key="E">E</span><span data-key="R">R</span><span data-key="T">T</span><span data-key="Y">Y</span><span data-key="U">U</span><span data-key="I">I</span><span data-key="O">O</span><span data-key="P">P</span><br>
-        <span data-key="A">A</span><span data-key="S">S</span><span data-key="D">D</span><span data-key="F">F</span><span data-key="G">G</span><span data-key="H">H</span><span data-key="J">J</span><span data-key="K">K</span><span data-key="L">L</span><br>
-        <span data-key="Z">Z</span><span data-key="X">X</span><span data-key="C">C</span><span data-key="V">V</span><span data-key="B">B</span><span data-key="N">N</span><span data-key="M">M</span>
-      </div>      
-          
+        <div class="numbers">
+            <span data-key="`">`</span>
+            <span data-key="1">1</span>
+            <span data-key="2">2</span>
+            <span data-key="3">3</span>
+            <span data-key="4">4</span>
+            <span data-key="5">5</span>
+            <span data-key="6">6</span>
+            <span data-key="7">7</span>
+            <span data-key="8">8</span>
+            <span data-key="9">9</span>
+            <span data-key="0">0</span>
+            <span data-key="-">-</span>
+            <span data-key="=">=</span>
+            <span data-key="Backspace">Backspace</span>
+        </div>
+        <div class="topRow">
+
+            <span data-key="Tab">Tab</span>
+            <span data-key="Q">Q</span>
+            <span data-key="W">W</span>
+            <span data-key="E">E</span>
+            <span data-key="R">R</span>
+            <span data-key="T">T</span>
+            <span data-key="Y">Y</span>
+            <span data-key="U">U</span>
+            <span data-key="I">I</span>
+            <span data-key="O">O</span>
+            <span data-key="P">P</span>
+            <span data-key="[">[</span>
+            <span data-key="]">]</span>
+        </div>
+        <span data-key="Enter">Enter</span>
+        <div class="homeRow">
+
+            <span data-key="CapsLock">CapsLock</span>
+            <span data-key="A">A</span>
+            <span data-key="S">S</span>
+            <span data-key="D">D</span>
+            <span data-key="F">F</span>
+            <span data-key="G">G</span>
+            <span data-key="H">H</span>
+            <span data-key="J">J</span>
+            <span data-key="K">K</span>
+            <span data-key="L">L</span>
+            <span data-key=";">;</span>
+            <span data-key="'">'</span>
+            <span data-key="\">\</span>
+        </div>
+        <div class="lowerRow">
+
+            <span data-key="ShiftLeft">Shift</span>
+            <span data-key="Z">Z</span>
+            <span data-key="X">X</span>
+            <span data-key="C">C</span>
+            <span data-key="V">V</span>
+            <span data-key="B">B</span>
+            <span data-key="N">N</span>
+            <span data-key="M">M</span>
+            <span data-key=",">,</span>
+            <span data-key=".">.</span>
+            <span data-key="/">/</span>
+            <span data-key="ShiftRight">Shift</span>
+        </div>
+        <div class="modifs">
+
+            <span data-key="ControlLeft">Ctrl</span>
+            <span data-key="MetaLeft">Win</span>
+            <span data-key="AltLeft">Alt</span>
+            <span data-key="Space">Space</span>
+            <span data-key="AltRight">Alt</span>
+            <span data-key="MetaRight">Win</span>
+            <span data-key="ContextMenu">Menu</span>
+            <span data-key="ControlRight">Ctrl</span>
+        </div>
+
+    </div>
+
+
 </body>
 <script src="main.js"></script>
+
 </html>
