--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="timer">
+    <div class="timer" style="display:none">
         0
     </div>
     <div class="text">
