--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
 </head>
 
 <body>
+  <header>
+    <h1>Typing Test</h1>
+    <button class="addCustomText">
+      Add your custom Text
+    </button>
+  </header>
+  <div class="customTextContainer custom">
+    <textarea name="customText" id="customText"  class="custom" rows="20"></textarea>
+    <button class="customTextno" class="custom" >No</button>
+    <button class="customTextok" class="custom" >OK</button>
+  </div>
+  <div class="customTextWrapper"></div>
+  <main>
+
     <div class="timer" style="display:none">
         0
     </div>
@@ -100,6 +114,7 @@
       </div>
       
 
+  </main>
 
 </body>
 <script src="main.js"></script>
