feat: Add the functionality to add custom text

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </button>
   </header>
   <div class="customTextContainer custom">
-    <textarea name="customText" id="customText"  class="custom" rows="20"></textarea>
-    <button class="customTextno" class="custom" >No</button>
-    <button class="customTextok" class="custom" >OK</button>
+    <textarea name="customText" id="customTextInput"  class="custom" rows="20"></textarea>
+    <button class="customTextNo">No</button>
+    <button class="customTextOk">OK</button>
   </div>
   <div class="customTextWrapper"></div>
   <main>
